<resources>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_name">ATM</string>
    <string name="logo">atm_logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="snap">Snap</string>
    <string name="missiontime">任務時間</string>
    <string name="missionlocation">任務地點</string>
    <string name="paid_tv">報酬</string>
    <string name="describe">描述</string>
    <string name="OUTPUT">送出</string>
    <string-array name="navigation_drawer_items_array">
        <item>放棄</item>
        <item>協議取消</item>
        <item>放棄</item>
        <item>NFC</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nfcpage">NFCPageActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>

</resources>
